src/component/Navbar.css
.navbar img {
    height: 70px;
    object-fit: cover;
}

.navbar li {
    margin: auto 20px;
    font-weight: bold;
}

.navbar li a {
    color: #3b463f;
    text-decoration: none;
}

.navbar li:hover a {
    color: #81c042;
    transition: color .3s;
}

.navbar li:hover .rounded-pill {
    color: #fff;
    background: #81c042c4;
    transition: background .3s;
}

.navbar .rounded-pill {
    background: #81c042;
    color: #fff;
    border-radius: 50px;
    padding: 8px 25px;
    white-space: nowrap;
    transition: 0.3s;
    font-size: 14px;
    display: inline-block;
}

.scrolled {
    background: rgba(255, 255, 255);
    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
    animation: 1s ease-out 0s 1 slideInFromTop;
}

@keyframes slideInFromTop {
    0% {
      transform: translateY(-100%);
    }
    100% {
      transform: translateY(0);
    }
}

